--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,3 +19,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.material-icons {
+  font-size: 3rem;
+  font-weight: 900;
+}
